--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -143,7 +143,8 @@ hr {
 }
 
 .header-copy {
-    margin-top: 200px;
+    margin-top: 250px;
+    padding-left: 5%;
 }
 
 .navigation {
@@ -181,7 +182,14 @@ hr {
     .about-link {
         position: absolute;
         top: -120px;
+    }
+}
 
+.contact-links {
+    padding-left: 0px;
+    li {
+        display: inline-block;
+        padding-right: 10px;
     }
 }
 
@@ -192,15 +200,20 @@ hr {
 }
 
 .container .jumbotron {
-    padding-left: 50px;
-    padding-right: 50px;
-
+    padding: 30px 50px;
 }
 
 .work {
     padding-top: 19px;
     color: #494949;
     border-top: 1px solid #e5e5e5;
+    position: relative;
+
+    .work-link {
+        position: absolute;
+        top: -120px;
+
+    }
 }
 
 .portfolio-item {
