Styled contact info - reduced line height.

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -68,7 +68,7 @@ hr {
 }
 
 .text-bigger {
-    line-height: 26px;
+    line-height: 10px;
     font-size: 26px;
     font-weight: 400;
 }
@@ -82,6 +82,10 @@ hr {
 
 .font2 {
     font-family: 'Bitter', serif;
+}
+
+.phone {
+    line-height: 10px;
 }
 // Background Colors
 .blue-background {
