Addressed fixed navigation for mobile.

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -442,7 +442,7 @@ hr {
     .navigation {
         background: #258496;
         position: absolute;
-        top: 0;
+        top: 0px;
     }
 
     .nav li {
